# sagemaker-endpoint-demo

./: README.md  sagemaker-lightgbm.drawio
lambda_src/: lambda_function.py
load_testing/: locustfile.py  pyproject.toml
sagemaker_src/: deploy.ipynb  dockerfile
sagemaker_src/code/: entry_point.py
