[tool.poetry]
name = "load_testing"
version = "0.1.0"
description = ""
authors = ["Joichiro433 <joichiro322@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
rich = "^13.7.0"
locust = "^2.23.1"
boto3 = "^1.34.51"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
